# tinfoil-python

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  bind.sh  build.sh  example.py  pyproject.toml  rename.py  sbom.cdx.json
.github/workflows/: build.yml  integration.yml  release.yml  sdk-release.yml  sdk-test.yml  test.yml  tinfoil-conformance.yml  update-verifier.yml  uv-audit.yml  zizmor.yml
docs/: python-attestation-flow.md  tdx-implementation-analysis.md
example/: main.py
scripts/: bump_version.py
sev_verifier/: .gitignore  attestation.py  requirements.txt  test_attestation.py  tinfoil-attestation  verify.py
src/tinfoil/: __init__.py  client.py  github.py  sigstore.py  user_cache_secret.py
src/tinfoil/attestation/: README.md  __init__.py  abi_sev.py  abi_sevsnp.py  abi_tdx.py  attestation.py  attestation_sev.py  attestation_tdx.py  bundle.py  cert_utils.py  collateral_tdx.py  genoa_cert_chain.py  intel_root_ca.py  pck_extensions.py  test_sev_attestation.py  types.py  utils.py  validate.py  validate_sev.py  validate_tdx.py  verify.py  verify_sev.py  verify_tdx.py
src/tinfoil/conformance/: __init__.py  cli.py  sigstore.py
tests/: conftest.py  test_attestation_all_enclaves.py  test_attestation_flow.py  test_certificate_reverification.py  test_collateral_tdx.py  test_constructor_timeout.py  test_ehbp_transport.py  test_encrypted_proxy.py  test_integration_async.py  test_integration_audio.py  test_integration_chat.py  test_integration_doc.py  test_integration_http.py  test_pck_extensions.py  test_sev_attestation.py  test_sev_validation.py  test_tdx_abi.py  test_tdx_attestation_flow.py  test_tdx_multiplatform.py  test_tdx_verify.py  test_user_cache_secret.py  test_validate_tdx.py  test_verification_failures.py  test_verification_failures_integration.py
tinfoil/: __init__.py
tinfoil_verifier/: Makefile  _client.cpython-313-darwin.h  build.py  client.c  client.go  client.py  client_go.h  go.py
