[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinfoil"]
sbom-files = ["sbom.cdx.json"]

[project]
name = "tinfoil"
version = "0.11.3"
description = "Python client for Tinfoil"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.63.0",
    "httpx>=0.28",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "pyOpenSSL>=25.0.0",
    "pyasn1>=0.4.0",
    "sigstore>=4.1.0",
    "platformdirs>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require TINFOIL_* env vars)",
    "asyncio: mark test perfroming async io"
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
